# Smart_Access_Control

./: Notion.md  README.md  build-profile.json5  oh-package-lock.json5  oh-package.json5
AppScope/: app.json5
AppScope/resources/base/element/: string.json
MyApplication/: oh-package.json5
MyApplication/entry/: build-profile.json5
MyApplication/entry/src/main/ets/entryability/: EntryAbility.ts
NewNativeCPP/: build-profile.json5  oh-package.json5
NewNativeCPP/AppScope/: app.json5
NewNativeCPP/AppScope/resources/base/element/: string.json
NewNativeCPP/entry/: build-profile.json5  oh-package.json5
NewNativeCPP/entry/libs/armeabi-v7a/opencv/org/: libopencv_calib3d.so.4.8.0  libopencv_features2d.so.4.8.0  libopencv_highgui.so.4.8.0  libopencv_ml.so.4.8.0  libopencv_objdetect.so.4.8.0  libopencv_stitching.so.4.8.0  libopencv_video.so.4.8.0
NewNativeCPP/entry/src/main/: module.json5
NewNativeCPP/entry/src/main/cpp/: CMakeLists.txt  getString.cpp  hello.cpp  seeta.cpp  uriToUrl.cpp
NewNativeCPP/entry/src/main/cpp/include/: Struct_cv.h  helloTest.h
NewNativeCPP/entry/src/main/cpp/types/libentry/: index.d.ts
NewNativeCPP/entry/src/main/cpp/types/libseeta/: oh-package.json5  seeta.d.ts
NewNativeCPP/entry/src/main/cpp/types/libseeta2/: oh-package.json5
NewNativeCPP/entry/src/main/ets/entryability/: EntryAbility.ets  TakePicAbility.ets
NewNativeCPP/entry/src/main/ets/pages/: FaceRecognize.ets  FaceRecognizePage.ets  FaceRegisterPage.ets  Index.ets  TakePicPage.ets
NewNativeCPP/entry/src/main/ets/utils/: Camera.ets  FaceUtils.ets  FileUtils.ets  PermissionUtils.ets  SeetafaceUtils.ets
NewNativeCPP/entry/src/main/resources/base/element/: string.json
NewNativeCPP/entry/src/main/resources/base/profile/: main_pages.json
NewNativeCPP/entry/src/main/resources/zh_CN/element/: string.json
entry/src/main/: module.json5
entry/src/main/cpp/: CMakeLists.txt  FStructs.h  FaceComparisor.cpp  FacePreprocessor.h  FaceRegister.cpp
entry/src/main/cpp/types/libentry/: index.d.ts
entry/src/main/ets/entryability/: Camera.ets  CameraAbility.ets  EntryAbility.ets  FaceLandmarkAbility.ets  TakePicAbility.ets
entry/src/main/ets/model/: CameraService.ets
entry/src/main/ets/pages/: CameraPage.ets  Index.ets  TakePicPage.ets
entry/src/main/ets/utils/: Camera.ets  PermissionUtils.ets
entry/src/main/resources/base/profile/: main_pages.json
